--- a/exercicio-22/fundo006.html
+++ b/exercicio-22/fundo006.html
@@ -7,23 +7,25 @@
     <style>
         body
         {
-            height: 100vh;
-            background-color: rgb(0, 0, 0);
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-size:  cover;
+            height: 100vh; /*autura */
+            background-color: rgb(0, 0, 0); /*cor do fundo*/
+            background-image: url(imagens/wallpaper002.jpg);/* imagem de fundo*/
+            background-position: center top;/*posição do fundo*/
+            background-repeat: no-repeat;/*repetição*/
+            background-size:  cover;/*tamanho do fundo*/
+            background-attachment: fixed;/*anexo de fundo:fixo*/
         }
 
 
        main{
-            background-color: rgb(241, 243, 242);
-            width: 300px;
-            padding: 10px;
-            margin:auto;
-            border-radius: 10px;
-            box-shadow: 0px 0px  20px 5px  blue;
-            border: 1px solid black;
+            background-color: rgb(241, 243, 242);/*cor do fundo*/
+            max-width: 400px;/*largura máxima*/
+            padding: 10px;/*preenchimento*/
+            margin:auto;/*magem*/
+            box-shadow: 0px 0px  20px 5px  blue;/*sombra da caixa*/
+            border: 1px solid black;/*borda*/
+            border-radius: 10px;/*raio da borda "ARREDONDAMENTO"*/
+
         }
     </style>
 </head>
@@ -36,6 +38,9 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem reiciendis corporis excepturi expedita iure, perspiciatis nostrum doloremque obcaecati veritatis tempore dolorem asperiores dolore rerum non quibusdam sapiente vero cum! Cum.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis exercitationem itaque incidunt dolores, voluptate natus ab molestias magni, tempora numquam enim commodi magnam deserunt labore explicabo nobis rerum facilis et.
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, modi. Dolore a adipisci alias hic delectus molestias, nemo dolorem culpa nihil neque fugit quae, facere debitis at in quasi asperiores?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur officia molestiae dolorem autem quod amet repellat obcaecati incidunt nam dolorum tempora tempore, beatae inventore hic minima ex laborum sed atque!
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et esse beatae necessitatibus! Aspernatur corrupti voluptas ullam quaerat beatae eligendi, porro eveniet animi, mollitia id, quia facere. Beatae placeat possimus harum.
+
             
         </p>
     </main>
