--- a/exercicio-22/fundo006.html
+++ b/exercicio-22/fundo006.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body
-        {
-            height: 100vh; /*autura */
-            background-color: rgb(0, 0, 0); /*cor do fundo*/
-            background-image: url(imagens/wallpaper002.jpg);/* imagem de fundo*/
-            background-position: center top;/*posição do fundo*/
-            background-repeat: no-repeat;/*repetição*/
-            background-size:  cover;/*tamanho do fundo*/
-            background-attachment: fixed;/*anexo de fundo:fixo*/
+       body
+       {/*
+            height: 100vh; /*autura */ 
+           /* background-color: rgb(0, 0, 0); /*cor do fundo*/
+           /* background-image: url(imagens/wallpaper002.jpg);/* imagem de fundo*/
+            /*background-position: center top;/*posição do fundo*/
+           /* background-repeat: no-repeat;/*repetição*/
+           /* background-size:  cover;/*tamanho do fundo*/
+           /* background-attachment: fixed;/*anexo de fundo:fixo*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
+            background-size: cover;
         }
 
 
@@ -41,7 +44,7 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur officia molestiae dolorem autem quod amet repellat obcaecati incidunt nam dolorum tempora tempore, beatae inventore hic minima ex laborum sed atque!
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et esse beatae necessitatibus! Aspernatur corrupti voluptas ullam quaerat beatae eligendi, porro eveniet animi, mollitia id, quia facere. Beatae placeat possimus harum.
 
-            
+           
         </p>
     </main>
 </body>
