--- a/exercicio-22/fundo007.html
+++ b/exercicio-22/fundo007.html
@@ -6,20 +6,35 @@
     <title>Alinhamento vertical</title>
     <style>
         #container{
-            height: 500px;
-            background-color: purple;
+           background-image: url(imagens/target001.png);
+            background-size: 100% 100%;
+            position: relative;
+            height: 90vh;
             padding: 10px;
-
-        }
-        #conteudo{
-            height: 200px;
-            width: 400px;
-            background-color: yellow;
+            background-color: purple;
             
 
         }
+        #conteudo{
+            background-image: url(imagens/target001.png);
+            background-size: 100% 100%;
+            position: absolute;
+            height: 200px;
+            width: 400px;
+            background-color: yellow;
+            left: 50%;
+            top: 50%;
+            transform: translate(-200px, -99px);
+            
+/*background: yellow 200px 400px ;*/
+        }
+
+        h1{
+        background-color: rgb(205, 157, 249);
+        }
     </style>
-</head>
+</head> 
+<h1>Teste de alinhamento de fundo</h1>
 <body>
     <section id="container">
         <article id="conteudo">
